--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.23.0",
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
+    "dark-sky": "^1.0.10",
     "debug": "~2.1.1",
     "ejs": "~2.3.1",
     "express": "~4.12.2",
