--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "morgan": "~1.5.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
+    "react-css": "0.0.2",
     "react-dom": "^15.5.4",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
+    "react-youtube": "^7.4.0",
     "reactcss": "^1.2.2",
     "webpack": "^2.2.1"
   },
