--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^15.5.4",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
+    "react-transition-group": "^1.2.0",
     "react-youtube": "^7.4.0",
     "reactcss": "^1.2.2",
     "webpack": "^2.2.1"
