--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "~1.3.4",
     "dark-sky": "^1.0.10",
     "debug": "~2.1.1",
+    "ease": "^0.1.0",
     "ejs": "~2.3.1",
     "express": "~4.12.2",
     "material-ui": "^0.17.1",
@@ -27,11 +28,13 @@
     "react-bootstrap": "^0.30.8",
     "react-css": "0.0.2",
     "react-dom": "^15.5.4",
+    "react-flipcard": "^0.2.1",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "react-transition-group": "^1.2.0",
     "react-weathericons": "^1.0.3",
     "react-youtube": "^7.4.0",
+    "react.animate": "^1.0.0",
     "reactcss": "^1.2.2",
     "webpack": "^2.2.1"
   },
