--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "serve ./public"
   },
   "dependencies": {
+    "@google/maps": "^0.4.1",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.22.0",
@@ -23,9 +24,11 @@
     "material-ui": "^0.17.1",
     "mongoose": "^4.0.2",
     "morgan": "~1.5.1",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-animated-weather": "^0.1.6",
     "react-bootstrap": "^0.30.8",
+    "react-card-flip": "0.0.8",
     "react-css": "0.0.2",
     "react-dom": "^15.5.4",
     "react-flipcard": "^0.2.1",
