--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "ease": "^0.1.0",
     "ejs": "~2.3.1",
     "express": "~4.12.2",
+    "gsap": "^1.20.1",
+    "gsap-react-plugin": "^1.0.2",
+    "morgan": "^1.8.2",
     "react": "^15.4.2",
+    "react-addons-transition-group": "^15.6.0",
     "react-animated-weather": "^0.1.6",
     "react-css": "0.0.2",
     "react-dom": "^15.5.4",
+    "react-gsap-enhancer": "^0.3.0",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "react-transition-group": "^1.2.0",
