--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "WeatherBot2000",
   "version": "1.0.0",
-  "private": true,
+  "description": "",
   "scripts": {
-    "start": "node app.js",
-    "watch": "webpack -d --watch",
-    "build": "webpack",
-    "serve": "serve ./public"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babelify": "7.2.0",
+    "browserify": "12.0.1",
+    "gulp": "3.9.0",
+    "gulp-util": "3.0.7",
+    "vinyl-source-stream": "1.1.0",
+    "serve": "^5.0.2",
+    "webpack": "^2.2.1"
   },
   "dependencies": {
     "@google/maps": "^0.4.1",
@@ -14,7 +22,9 @@
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babelify": "^7.3.0",
     "body-parser": "~1.12.0",
+    "browserify": "^14.4.0",
     "cookie-parser": "~1.3.4",
     "dark-sky": "^1.0.10",
     "debug": "~2.1.1",
@@ -25,7 +35,7 @@
     "gsap": "^1.20.1",
     "gsap-react-plugin": "^1.0.2",
     "morgan": "^1.8.2",
-    "react": "^15.4.2",
+    "react": "^15.6.1",
     "react-addons-transition-group": "^15.6.0",
     "react-animated-weather": "^0.1.6",
     "react-css": "0.0.2",
@@ -36,14 +46,6 @@
     "react-transition-group": "^1.2.0",
     "react-youtube": "^7.4.0",
     "reactcss": "^1.2.2",
-    "webpack": "^2.2.1"
-  },
-  "devDependencies": {
-    "babel-loader": "^6.4.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "nodemon": "^1.11.0",
-    "serve": "^5.0.2",
     "webpack": "^2.2.1"
   }
 }
