--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "babelify": "7.2.0",
     "browserify": "12.0.1",
     "gulp": "3.9.0",
+    "gulp-sass": "^3.1.0",
     "gulp-util": "3.0.7",
-    "vinyl-source-stream": "1.1.0",
     "serve": "^5.0.2",
+    "vinyl-source-stream": "1.1.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
