--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "watch": "webpack -d --watch",
+    "build": "webpack",
+    "serve": "serve ./public"
   },
   "devDependencies": {
     "babel-preset-es2015": "6.3.13",
