--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "dark-sky": "^1.0.10",
     "debug": "~2.1.1",
     "ease": "^0.1.0",
-    "ejs": "~2.3.1",
+    "ejs": "2.5.5",
     "express": "~4.12.2",
     "forecastio": "^1.0.2",
     "gsap": "^1.20.1",
